--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "mongojs": "^3.1.0",
     "mongoose": "^5.5.13"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
